--- a/.wwhrd.yml
+++ b/.wwhrd.yml
@@ -38,5 +38,15 @@ exceptions:
   - github.com/hashicorp/go-version # MPL-2.0
   - github.com/hashicorp/golang-lru # MPL-2.0
   - github.com/hashicorp/golang-lru/simplelru # MPL-2.0
+  - github.com/hashicorp/hcl/hcl/ast # MPL-2.0
+  - github.com/hashicorp/hcl/hcl/token # MPL-2.0
+  - github.com/hashicorp/hcl/hcl/scanner # MPL-2.0
+  - github.com/hashicorp/hcl/json/parser # MPL-2.0
+  - github.com/hashicorp/hcl/json/scanner # MPL-2.0
+  - github.com/hashicorp/hcl/json/token # MPL-2.0
+  - github.com/hashicorp/hcl # MPL-2.0
+  - github.com/hashicorp/hcl/hcl/parser # MPL-2.0
+  - github.com/hashicorp/hcl/hcl/printer # MPL-2.0
+  - github.com/hashicorp/hcl/hcl/strconv # MPL-2.0
   - github.com/yvasiyarov/go-metrics # BSD-2-Clause-Views required for https://github.com/distribution/distribution (used by Helm)
   - github.com/bugsnag/osext # Zlib required for https://github.com/distribution/distribution (used by Helm)
