--- a/hack/reconciling.yaml
+++ b/hack/reconciling.yaml
@@ -68,4 +68,5 @@ resourceTypes:
   # velero/v1
   - { package: github.com/vmware-tanzu/velero/pkg/apis/velero/v1, resourceName: BackupStorageLocation, importAlias: velerov1 }
 
+  # cilium.io/v2
   - { package: github.com/cilium/cilium/pkg/k8s/apis/cilium.io/v2, resourceName: CiliumNetworkPolicy, importAlias: ciliumv2 }
