--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -39,6 +39,19 @@ spec:
                     type: boolean
                   description: AllowedOperatingSystems shows if the operating system is allowed to be use in the machinedeployment.
                   type: object
+                applicationOptions:
+                  properties:
+                    defaultApplications:
+                      description: DefaultApplications is a list of applications which will be enabled by default for user clusters
+                      items:
+                        type: string
+                      type: array
+                    defaultApplicationsEnforced:
+                      description: DefaultApplicationsEnforced enforces default applications on user clusters
+                      type: boolean
+                  required:
+                    - defaultApplicationsEnforced
+                  type: object
                 cleanupOptions:
                   description: CleanupOptions control what happens when a cluster is deleted via the dashboard.
                   properties:
