--- a/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemprofile.yaml
+++ b/pkg/controller/user-cluster-controller-manager/resources/resources/operating-system-manager/static/crd-operatingsystemprofile.yaml
@@ -17,8 +17,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.9.2
-  creationTimestamp: null
+    controller-gen.kubebuilder.io/version: v0.13.0
   name: operatingsystemprofiles.operatingsystemmanager.k8c.io
 spec:
   group: operatingsystemmanager.k8c.io
@@ -137,7 +136,8 @@ spec:
                     type: object
                   supportedContainerRuntimes:
                     description: SupportedContainerRuntimes represents the container
-                      runtimes supported by the given OS
+                      runtimes supported by the given OS. Docker has been deprecated
+                      and is no-op.
                     items:
                       description: ContainerRuntimeSpec aggregates information about
                         a specific container runtime
@@ -347,7 +347,8 @@ spec:
                     type: object
                   supportedContainerRuntimes:
                     description: SupportedContainerRuntimes represents the container
-                      runtimes supported by the given OS
+                      runtimes supported by the given OS. Docker has been deprecated
+                      and is no-op.
                     items:
                       description: ContainerRuntimeSpec aggregates information about
                         a specific container runtime
@@ -482,6 +483,7 @@ spec:
                       - aws
                       - azure
                       - digitalocean
+                      - edge
                       - gce
                       - hetzner
                       - kubevirt
