--- a/pkg/crd/k8c.io/operatingsystemmanager.k8c.io_customoperatingsystemprofiles.yaml
+++ b/pkg/crd/k8c.io/operatingsystemmanager.k8c.io_customoperatingsystemprofiles.yaml
@@ -24,10 +24,10 @@ spec:
           description: OperatingSystemProfile is the object that represents the OperatingSystemProfile
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: "APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources"
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: "Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds"
               type: string
             metadata:
               type: object
@@ -90,7 +90,7 @@ spec:
                             type: string
                           type: array
                         yum_repo_dir:
-                          description: 'YumRepoDir the repo parts directory where individual yum repo config files will be written. Default: /etc/yum.repos.d'
+                          description: "YumRepoDir the repo parts directory where individual yum repo config files will be written. Default: /etc/yum.repos.d"
                           type: string
                         yum_repos:
                           additionalProperties:
@@ -101,7 +101,7 @@ spec:
                           type: object
                       type: object
                     supportedContainerRuntimes:
-                      description: SupportedContainerRuntimes represents the container runtimes supported by the given OS
+                      description: SupportedContainerRuntimes represents the container runtimes supported by the given OS. Docker has been deprecated and is no-op.
                       items:
                         description: ContainerRuntimeSpec aggregates information about a specific container runtime
                         properties:
@@ -199,7 +199,7 @@ spec:
                       type: array
                   type: object
                 osName:
-                  description: 'OSType represent the operating system name e.g: ubuntu'
+                  description: "OSType represent the operating system name e.g: ubuntu"
                   enum:
                     - flatcar
                     - rhel
@@ -267,7 +267,7 @@ spec:
                             type: string
                           type: array
                         yum_repo_dir:
-                          description: 'YumRepoDir the repo parts directory where individual yum repo config files will be written. Default: /etc/yum.repos.d'
+                          description: "YumRepoDir the repo parts directory where individual yum repo config files will be written. Default: /etc/yum.repos.d"
                           type: string
                         yum_repos:
                           additionalProperties:
@@ -278,7 +278,7 @@ spec:
                           type: object
                       type: object
                     supportedContainerRuntimes:
-                      description: SupportedContainerRuntimes represents the container runtimes supported by the given OS
+                      description: SupportedContainerRuntimes represents the container runtimes supported by the given OS. Docker has been deprecated and is no-op.
                       items:
                         description: ContainerRuntimeSpec aggregates information about a specific container runtime
                         properties:
@@ -393,6 +393,7 @@ spec:
                           - aws
                           - azure
                           - digitalocean
+                          - edge
                           - gce
                           - hetzner
                           - kubevirt
