set release tag for minio/mc
Signed-off-by: Fabio Berchtold <fabio.berchtold@swisscom.com>

--- a/charts/mla/minio-lifecycle-mgr/values.yaml
+++ b/charts/mla/minio-lifecycle-mgr/values.yaml
@@ -14,7 +14,7 @@
 lifecycleMgr:
   image:
     repository: docker.io/minio/mc
-    tag: latest
+    tag: RELEASE.2024-03-13T23-51-57Z
     pullPolicy: IfNotPresent
   # list of image pull secret references, e.g.
   # imagePullSecrets:
